--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="logo">
                 <img src="Fotos/ComplementosExtra/Logo.png" alt="Logo IESM">
                 <div class="logo-text">
-                    <h1>INSTITUTO DE ESTUDIOS SUPERIOR EL MARQUÉS</h1>
+                    <h1>INSTITUTO DE ESTUDIOS SUPERIORES EL MARQUÉS</h1>
                     <p>Ingeniería en Sistemas Computacionales</p>
                 </div>
             </div>
